Gave blog preview a set height to stop weird wrapping

--- a/assets/layout-changes.css
+++ b/assets/layout-changes.css
@@ -57,6 +57,10 @@ input {
 	text-align: center;
 }
 
+.blog-preview {
+	height: 400px;
+}
+
 .featured-collection-title {
 	text-align: center;
 }
